Fixed alignment issue

--- a/assets/stylesheets/modern.css
+++ b/assets/stylesheets/modern.css
@@ -255,7 +255,7 @@ p + p {
   display: none;
   background-color: #ffffff;
   position: absolute;
-  top: 90px;
+  top: 38px;
   min-width: 180px;
   padding: 10px;
   border-radius: 3px;
